# kermol

./: .gitignore  Cargo.toml  Makefile  grub.cfg  limine.conf  linker.ld
.cargo/: config.toml
src/: lib.rs  limine_requests.rs  multiboot2_header.rs  serial.rs  util.rs
src/display/: linear_framebuffer.rs  mod.rs  vga_text_emulation.rs  vga_text_writer.rs
src/interrupts/: apic.rs  exceptions.rs  mod.rs
src/limine/: mod.rs  requests.rs
src/memory/: allocated_memory.rs  gdt.rs  heap.rs  mod.rs
src/memory/paging/: bitmap_allocator.rs  frame_allocation.rs  mod.rs  page_mapping.rs  page_table.rs  paging.rs  paging_controller.rs
