[package]
name = "kermol"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]  # Important for linking
name = "kermol"
test = false
doctest = false
bench = false

[profile.release]
panic = "abort"
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1
debug = false

[dependencies]
x86_64 = "0.15.4"
spin = "0.10.0"
uart_16550 = "0.2.0"
limine-protocol-for-rust = "0.1.9"
pic8259 = "0.11.0"
linked_list_allocator = "0.9.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
